# FlipSwitch-Browser

./: README.md  pubspec.yaml  y  y.pub
.github/workflows/: build.yml  ios-build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/br/: MainActivity.kt
ios/Runner/: Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/models/: profile_model.dart  profile_model.g.dart  settings_model.dart
lib/data/services/: profile_manager.dart  settings_manager.dart
lib/features/browser/engine/: flip_engine.dart
lib/features/browser/okak/: engine_core.dart  okak_engine.dart  proxy_handler.dart
lib/features/browser/okak/injections/: fingerprint_js.dart  fingerprint_modules.dart
lib/features/browser/okak/tor/: arti_ffi.dart  tor_status.dart
lib/features/browser/widgets/: browser_home.dart  settings_screen.dart
lib/services/: tor_bridge_service.dart
lib/ui/settings/: settings_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust_core/: Cargo.toml  README.md
rust_core/src/: lib.rs
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
